--- a/package.json
+++ b/package.json
@@ -44,8 +44,11 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "@prismicio/client": "^4.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
+    "prismic-dom": "^2.2.5",
     "pug": "^3.0.2"
   }
 }
