--- a/package.json
+++ b/package.json
@@ -45,8 +45,12 @@
   },
   "dependencies": {
     "@prismicio/client": "^4.0.0",
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
+    "errorhandler": "^1.5.1",
     "express": "^4.18.2",
+    "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "prismic-dom": "^2.2.5",
     "pug": "^3.0.2"
