--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "imagemin-svgo": "^9.0.0",
     "include-media": "^1.4.10",
     "mini-css-extract-plugin": "^1.5.0",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "normalize-wheel": "^1.0.1",
     "ogl": "^0.0.73",
     "postcss-loader": "^5.2.0",
