added webgl transition between collections and details pages

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "prismic-dom": "^2.2.5",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "ua-parser-js": "^1.0.33"
   }
 }
